# sw-metadata-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  LICENSE  QUICKSTART.md  README.md  codemeta.json  docker-compose.yml  ossr_analysis.sh  pyproject.toml  ty.toml  update_version_package.sh
.github/: dependabot.yml
.github/actions/: README.md
.github/actions/create-issues/: action.yml
.github/actions/metacheck-analysis/: action.yml
.github/actions/run-analysis/: action.yml
.github/actions/run-pipeline/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  docker.yml  example-usage.yml  run-bot-analysis.yml
assets/: config_su.json  example_list_repo.json  opt-ins.json  opt-outs.json  ossr_list_url.json
assets/existing_metacheck_analysis/: example_pitfall_1.jsonld  example_pitfall_2.jsonld  example_pitfall_3.jsonld  example_pitfall_4.jsonld  example_pitfall_5.jsonld  repo_list_output_1_pitfalls.jsonld  repo_list_output_2_pitfalls.jsonld  repo_list_output_3_pitfalls.jsonld  repo_list_output_4_pitfalls.jsonld  repo_list_output_5_pitfalls.jsonld  repo_list_output_6_pitfalls.jsonld
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/_static/: custom.css
src/sw_metadata_bot/: __init__.py  analysis_runtime.py  check_parsing.py  codemeta_runtime.py  commit_lookup.py  community_config.py  config_utils.py  constants.py  create_issues.py  github_api.py  gitlab_api.py  history.py  incremental.py  issue_constants.py  main.py  metacheck_wrapper.py  pipeline.py  pitfalls.py  platform_api.py  publish.py  repo_api.py  reporting.py  rsmetacheck_wrapper.py  token_resolver.py  utils.py  verify_tokens.py
tests/: conftest.py  test_check_parsing.py  test_codemeta_runtime.py  test_config_utils.py  test_create_issues.py  test_gitlab_integration.py  test_history.py  test_incremental.py  test_init.py  test_pipeline.py  test_pitfalls.py  test_publish.py  test_token_resolution.py  test_update_version_package.py
tools/release/: update_version_package.py
