[project]
name = "sw-metadata-bot"
version = "0.1.0"
description = "RSMetaCheck bot for pushing issues with existing repository metadata"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Tom François", email = "tom.francois@lapp.in2p3.fr"}
]
dependencies = [
    "click>=8.3.1",
    "metacheck",
    "requests>=2.32.5",
]

[project.scripts]
sw-metadata-bot = "sw_metadata_bot.main:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.uv.sources]
metacheck = { git = "https://github.com/SoftwareUnderstanding/RsMetaCheck"}
