[project]
name = "sw-metadata-bot"
version = "0.2.0"
description = "RSMetaCheck bot for pushing issues with existing repository metadata"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Tom François", email = "tom.francois@lapp.in2p3.fr"}
]
dependencies = [
    "click>=8.3.1",
    "metacheck>=0.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

keywords = ["codemeta", "metadata", "bot", "quality software"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
sw-metadata-bot = "sw_metadata_bot.main:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "interrogate>=1.7.0",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage-badge",
]
docs = [
    "furo>=2025.12.19",
    "sphinx",
]

[tool.uv.sources]
metacheck = { git = "https://github.com/SoftwareUnderstanding/RsMetaCheck"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests",".venv", ".ruff-cache"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
fail-under = 90
# example values
exclude = ["setup.py", "docs", "build"]
# example regex
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
ext = []
# possible values: sphinx (default), google
style = "sphinx"
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
# output file location
generate-badge = "."
badge-format = "svg"