[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-metadata-bot"
version = "0.4.1"
description = "Metadata quality bot for software repositories, leveraging metacheck for analysis and GitHub/GitLab APIs for issue management."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    {name = "Tom François", email = "tom.francois@lapp.in2p3.fr"}
]
dependencies = [
    "click>=8.3.1",
    "rsmetacheck>=0.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "setuptools[test]<83.0.0",
]

keywords = ["codemeta", "metadata", "bot", "quality software"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SoftwareUnderstanding/sw-metadata-bot"
Repository = "https://github.com/SoftwareUnderstanding/sw-metadata-bot"
Issues = "https://github.com/SoftwareUnderstanding/sw-metadata-bot/issues"

[project.scripts]
sw-metadata-bot = "sw_metadata_bot.main:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.3",
    "interrogate>=1.7.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
test = [
    "coverage-badge",
    "pytest",
    "pytest-cov",
    "setuptools<83.0.0",
]
docs = [
    "furo>=2025.12.19",
    "sphinx",
    "sphinxcontrib-mermaid>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.sw_metadata_bot.docs]
# Start year for copyright range (displayed as "YYYY–present" in docs)
copyright_year = "2026"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration_gitlab: real GitLab API integration tests requiring a valid GITLAB_API_TOKEN",
]

[tool.bandit]
exclude_dirs = ["tests",".venv", ".ruff-cache"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
fail-under = 90
# example values
exclude = ["setup.py", "docs", "build"]
# example regex
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
ext = []
# possible values: sphinx (default), google
style = "sphinx"
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
# output file location
generate-badge = "."
badge-format = "svg"
